# raplcap

./: .travis.yml  CMakeLists.txt  Config.cmake.in  LICENSE  README.md  RELEASES.md  appveyor.yml  pkgconfig.in
.github/workflows/: ci.yml
cmake/: FindIntelPowerGadget.cmake  FindPowercap.cmake
inc/: raplcap-common.h  raplcap-wrappers.h  raplcap.h
ipg/: CMakeLists.txt  README.md  raplcap-ipg.c
libmsr/: CMakeLists.txt  README.md  raplcap-libmsr.c  raplcap-libmsr.h
msr/: CMakeLists.txt  README.md  raplcap-cpuid.c  raplcap-cpuid.h  raplcap-msr-common.c  raplcap-msr-common.h  raplcap-msr-sys-linux.c  raplcap-msr-sys.h  raplcap-msr.c  raplcap-msr.h
msr-direct/: CMakeLists.txt  raplcap-msr-direct.c
msr/etc/: msr_safe_allowlist  msr_safe_whitelist
msr/test/: raplcap-msr-common-test.c
msr/tools/: sdm_helper.py
powercap/: CMakeLists.txt  README.md  powercap-intel-rapl.c  powercap-intel-rapl.h  raplcap-powercap-tree.c  raplcap-powercap.c
rapl-configure/: CMakeLists.txt  rapl-configure.1.in  rapl-configure.c
sysfs/: CMakeLists.txt  README.md  raplcap-sysfs.c
test/: CMakeLists.txt  raplcap-integration-test.c  raplcap-unit-test.c
utils/: CMakeLists.txt
